# Sistemas-distribuidos

./: CMakeCache.txt  CMakeLists.txt  ConfiguracionCluster.txt  Makefile  MotionInterpolation  MotionInterpolation.cpp  README.md  cmake_install.cmake  compile.sh  mpi_hosts  script.sh  table.txt
ejemplos/openMP/: .tags  pi_for.c  pi_omp.c  private_shared.c  sections.c  sections_firstprivate.c  tasks1.c  tasks2.c
ejercicios/Pthread/1_pi/: Ejercicio1.ipynb  calcpi_nopad  calcpi_nopad.c  calcpi_pad  calcpi_pad.c  script.sh  times.csv
openMPI/src/video/test1/: frameTime.csv
proyecto_final/CUDA/: CMakeCache.txt  CMakeLists.txt  Makefile  MotionInterpolation  MotionInterpolation.cu  cmake_install.cmake  script.sh  test
proyecto_final/CUDA/src/video/test1/: frameTime.csv  result.avi  totalTime.csv
proyecto_final/CUDA/src/video/test2/: frameTime.csv  totalTime.csv
proyecto_final/CUDA/src/video/test3/: frameTime.csv  totalTime.csv
proyecto_final/CUDA/src/video/test4/: frameTime.csv  result.avi  totalTime.csv
proyecto_final/Secuencial/: Makefile  MotionInterpolation.cpp  script.sh
proyecto_final/openMP/: CMakeCache.txt  Makefile  MotionInterpolation  MotionInterpolation.cpp  cmake_install.cmake  install.sh  script.sh
proyecto_final/openMP/Test/: test  test.cpp
proyecto_final/secuencial/: CMakeCache.txt  CMakeLists.txt  Makefile  MotionInterpolation  MotionInterpolation.cpp  cmake_install.cmake
src/video/test1/: frameTime.csv  totalTime.csv
src/video/test2/: frameTime.csv
src/video/test4/: frameTime.csv  totalTime.csv
(+39 files in other folders)
